Adding build pipeline

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <shared-nav></shared-nav>
-<ion-content color="secondary">
+<ion-content>
   <ion-grid class="ion-padding">
     <app-banner></app-banner>
     <shared-section-header class="ion-text-center" title="Games"></shared-section-header>
