--- a/src/app/shared/team/team.component.html
+++ b/src/app/shared/team/team.component.html
@@ -1,6 +1,7 @@
 <ion-row>
   <ion-col *ngFor="let member of team" size="12" size-md="6" size-lg="4" size-xl="3" class="ion-padding ion-text-center pb-5">
       <img alt="{{ member.title }}" src="assets/{{ member.image }}" style="border-radius: 50%; width:50%" />
+      <ion-title>{{ member.name }}</ion-title>
       <ion-title>{{ member.position }}</ion-title>
       <ion-card-subtitle>
         "{{ member.title }}"
