Added the game...

--- a/src/app/pages/home/banner/banner.component.html
+++ b/src/app/pages/home/banner/banner.component.html
@@ -1,12 +1,8 @@
 <ion-row class="pb-5">
   <ion-col size="12" size-md="4" size-xl="3" class="ion-padding">
-    <img src="assets/logo-og-games.png" alt="Orcwood Logo"/>
+    <img src="assets/logo-og-games.svg" alt="Orcwood Logo"/>
   </ion-col>
-  <ion-col size="12" size-md="8" size-xl="9" class="ion-padding ion-text-center" style="margin: auto">
-    <div>
-      <ion-title>Welcome To Our Studio!</ion-title>
-      <hr/>
-      <ion-button (click)="utilityService.goToLink('/games')">View Games</ion-button>
-    </div>
+  <ion-col size="12" size-md="8" size-xl="9" class="ion-padding">
+    <iframe src="assets/downside-up/index.html" class="responsive-iframe"></iframe>
   </ion-col>
 </ion-row>
