--- a/src/app/pages/games/game/game.page.html
+++ b/src/app/pages/games/game/game.page.html
@@ -1,11 +1,18 @@
 <shared-nav></shared-nav>
 <ion-content>
+  <shared-section-header [title]="game?.title" class="ion-text-center"></shared-section-header>
   <ion-slides *ngIf="game?.images" pager="true" [options]="slideOpts">
     <ion-slide *ngFor="let image of game?.images">
       <img src="assets/{{image.src}}" alt="{{ image?.alt ? image.alt : game?.title }}"/>
     </ion-slide>
   </ion-slides>
-  <shared-section-header [title]="game?.title" class="ion-text-center"></shared-section-header>
+  <ion-row class="ion-text-center">
+    <ion-col size="12" size-md="10" size-xl="8" style="margin: auto" class="ion-padding">
+      <div *ngIf="game?.html5Url" class="container">
+        <iframe [src]="game?.html5Url ?? '' | safe: 'resourceUrl'" class="responsive-iframe"></iframe>
+      </div>
+    </ion-col>
+  </ion-row>
   <ion-row class="ion-justify-content-center">
     <ion-col class="ion-text-center" size="12" size-md="8" size-lg="6">
       <p>{{ game?.description }}</p>
