--- a/src/app/pages/home/banner/banner.component.scss
+++ b/src/app/pages/home/banner/banner.component.scss
@@ -1,17 +1,26 @@
-.container {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-	height: 100%;
+.game-banner-du{
+  background-image: url("/assets/games/downside-up/gameplay.png");
+  background-position: center;
+  padding:0px;
 }
 
-/* Then style the iframe to fit in the container div with full height and width */
-.responsive-iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
+.shaded{
+  background-color: rgba(0,0,0,.5);
+  width:100%;
+  height:100%;
+}
+
+.flexContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: space-between;
+  justify-content: center;
+}
+
+.flexItem {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  padding-bottom: 4px;
 }
