--- a/src/app/pages/home/banner/banner.component.html
+++ b/src/app/pages/home/banner/banner.component.html
@@ -1,13 +1,20 @@
 <ion-row class="pb-5">
-  <ion-col size="12" size-md="4" size-xl="3" class="ion-padding ion-col">
-    <img src="assets/logo-og-games.svg" alt="Orcwood Logo"/>
+  <ion-col size="12" size-md="4" size-xl="3" style="padding:0px;">
+    <div class="shaded">
+      <div class="shaded">
+        <div class="shaded ion-padding">
+          <img src="assets/logo-og-games.svg" alt="Orcwood Logo"/>
+        </div>
+      </div>
+      
+    </div>
   </ion-col>
   <ion-col size="12" size-md="8" size-xl="9" class="game-banner-du">
     <div class="shaded">
       <ion-row style="width:100%;height:100%;">
         <ion-col size="12" size-md="4" class="flexContainer">
           <div class="ion-padding ion-text-center">
-            Downside Up
+            <ion-text color="light">Downside Up</ion-text>
           </div>
           <div class="ion-padding ion-text-center">
             <ion-button (click)="utilityService.goToLink('/games/downside-up')">Play Now</ion-button>
@@ -17,20 +24,18 @@
           <div class="shaded">
             <div class="ion-padding">
               <strong>
-                High Scores
+                <ion-text color="light">High Scores</ion-text>
               </strong>
               <div class="ion-padding">
                 <div *ngFor="let highScore of highScores" class="flexItem">
-                  <span>{{ highScore.gamerTag }}</span>
-                  <span>{{ highScore.time }}</span>
+                  <ion-text color="light">{{ highScore.gamerTag }}</ion-text>
+                  <ion-text color="light">{{ highScore.time }}</ion-text>
               </div>
               </div>
-              
             </div>
           </div>
         </ion-col>
       </ion-row>
     </div>
-   
   </ion-col>
 </ion-row>
