--- a/src/app/pages/home/banner/banner.component.html
+++ b/src/app/pages/home/banner/banner.component.html
@@ -13,10 +13,11 @@
     <div class="shaded">
       <ion-row style="width:100%;height:100%;">
         <ion-col size="12" size-md="4" class="flexContainer">
-          <div class="ion-padding ion-text-center">
-            <ion-text color="light">Downside Up</ion-text>
+          <div style="margin-bottom:auto;">
+            <h2 style="margin-bottom:0px;">Downside Up</h2>
+            <h2 class="flipped" style="margin-bottom:0px;">Downside Up</h2>
           </div>
-          <div class="ion-padding ion-text-center">
+          <div style="padding-bottom:32px;">
             <ion-button (click)="utilityService.goToLink('/games/downside-up')">Play Now</ion-button>
           </div>
         </ion-col>
@@ -24,12 +25,12 @@
           <div class="shaded">
             <div class="ion-padding">
               <strong>
-                <ion-text color="light">High Scores</ion-text>
+                <ion-text>High Scores</ion-text>
               </strong>
               <div class="ion-padding">
                 <div *ngFor="let highScore of highScores" class="flexItem">
-                  <ion-text color="light">{{ highScore.gamerTag }}</ion-text>
-                  <ion-text color="light">{{ highScore.time }}</ion-text>
+                  <span>{{ highScore.gamerTag }}</span>
+                  <span>{{ highScore.time }}</span>
               </div>
               </div>
             </div>
