--- a/src/app/pages/home/banner/banner.component.scss
+++ b/src/app/pages/home/banner/banner.component.scss
@@ -16,6 +16,7 @@
   align-items: center;
   align-content: space-between;
   justify-content: center;
+  color:#FFF;
 }
 
 .flexItem {
@@ -23,4 +24,14 @@
   align-items: center !important;
   justify-content: space-between !important;
   padding-bottom: 4px;
+  color:#FFF;
+}
+
+.flipped{
+  -moz-transform: scale(1, -1);
+-webkit-transform: scale(1, -1);
+-o-transform: scale(1, -1);
+-ms-transform: scale(1, -1);
+transform: scale(1, -1);
+color: #C0C0C0;
 }
