New banner gif!!!

--- a/src/app/pages/home/banner/banner.component.scss
+++ b/src/app/pages/home/banner/banner.component.scss
@@ -1,6 +1,5 @@
 .game-banner-du{
-  background-image: url("/assets/games/downside-up/gameplay.png");
-  background-position: center;
+  background: no-repeat center/100% url("/assets/home/Upside_Down_6.gif");
   padding:0px;
 }
 
