--- a/src/app/pages/games/game/game.page.html
+++ b/src/app/pages/games/game/game.page.html
@@ -22,13 +22,24 @@
       </ion-row>
     </ion-col>
     <ion-col size="12" size-md="4">
-      <h3>Project Manager</h3>
-      <div style="display:flex; align-items: center; gap:8px; margin-left: 8px;">
-        <img alt="{{ projectManager?.title }}" width="32" height="32" src="assets/{{ projectManager?.image ? projectManager?.image : 'person.jpg' }}" style="border-radius: 50%" />
-        <ion-text>{{ projectManager?.name }}</ion-text>
-      </div>
-      
+      <ion-row>
+        <ion-col size="12">
+          <h3>Project Manager</h3>
+          <div class="flex">
+            <img alt="{{ projectManager?.title }}" width="32" height="32" src="assets/{{ projectManager?.image ? projectManager?.image : 'person.jpg' }}" style="border-radius: 50%" />
+            <ion-text>{{ projectManager?.name }}</ion-text>
+          </div>
+        </ion-col>
+        <ion-col size="12" *ngIf="game?.resourceLinks">
+          <h3>Resources</h3>
+        </ion-col>
+        <ion-col *ngFor="let resourceLink of game?.resourceLinks ?? []" size="12">
+          <ion-button class="flex" href="{{ resourceLink.url }}" target="_blank">
+            <ion-icon name="{{ resourceLink.icon }}"></ion-icon>
+            <ion-text style="padding-left:8px;">{{ resourceLink.icon == "logo-google" ? 'Shared Drive' : 'Jira Board' }}</ion-text>
+          </ion-button>
+        </ion-col>
+      </ion-row>
     </ion-col>
   </ion-row>
-  
 </ion-content>
