--- a/src/app/pages/games/game/components/nightly-builds/nightly-builds.component.html
+++ b/src/app/pages/games/game/components/nightly-builds/nightly-builds.component.html
@@ -5,8 +5,14 @@
       Nightly Builds
     </h3>
     <ion-list>
-      <ion-item *ngFor="let nightlyBuild of nightlyBuilds">
-        <a href="{{ nightlyBuild.url }}" target="_blank" class="flex"><ion-icon name="cloud-download-outline"></ion-icon>{{ nightlyBuild.dateTime | date:'short' }}</a>
+      <ion-item *ngFor="let nightlyBuild of nightlyBuilds" style="width:100%;">
+        <a href="{{ nightlyBuild.url }}" target="_blank" class="flex" style="width:100%;justify-content:space-between">
+          <span class="flex">
+            <ion-icon name="cloud-download-outline"/>
+            {{ nightlyBuild.dateTime | date:'shortDate' }}
+          </span>
+          {{ nightlyBuild.size }}
+        </a>
       </ion-item>
     </ion-list>
   </ion-col>
