--- a/src/app/pages/home/banner/banner.component.html
+++ b/src/app/pages/home/banner/banner.component.html
@@ -1,33 +1,21 @@
 <ion-row class="pb-5">
-  <ion-col size="12" size-md="4" size-xl="3" style="padding:0px;">
-    <div class="shaded">
-      <div class="shaded">
-        <div class="shaded ion-padding">
-          <img src="assets/logo-og-games.svg" alt="Orcwood Logo"/>
-        </div>
-      </div>
-      
-    </div>
+  <ion-col size="12" size-md="3" class="ion-padding" style="margin:auto auto;">
+    <img src="assets/logo-og-games.svg" alt="Orcwood Logo"/>
   </ion-col>
-  <ion-col size="12" size-md="8" size-xl="9" class="game-banner-du">
+  <ion-col size="12" size-md="3" class="card">
+    <img src="assets/games/downside-up/du-logo.png" alt="Orcwood Logo" class="ion-padding"/>
+    <ion-button (click)="utilityService.goToLink('/games/downside-up')">Play Now</ion-button>
+  </ion-col> 
+  <ion-col size="12" size-md="6" class="game-banner-du">
     <div class="shaded">
       <ion-row style="width:100%;height:100%;">
-        <ion-col size="12" size-md="4" class="flexContainer">
-          <div style="margin-bottom:auto;">
-            <h2 style="margin-bottom:0px;">Downside Up</h2>
-            <h2 class="flipped" style="margin-bottom:0px;">Downside Up</h2>
-          </div>
-          <div style="padding-bottom:32px;">
-            <ion-button (click)="utilityService.goToLink('/games/downside-up')">Play Now</ion-button>
-          </div>
-        </ion-col>
-        <ion-col size="12" size-md="8" style="padding:0;">
+        <ion-col size="12" style="padding:0;">
           <div class="shaded">
-            <div class="ion-padding">
+            <div class="ion-padding" style="height:100%">
               <strong>
                 <ion-text>High Scores</ion-text>
               </strong>
-              <div class="ion-padding">
+              <div class="ion-padding high-score-container">
                 <div *ngFor="let highScore of highScores" class="flexItem">
                   <span>{{ highScore.gamerTag }}</span>
                   <span>{{ highScore.time }}</span>
