--- a/src/app/pages/home/banner/banner.component.scss
+++ b/src/app/pages/home/banner/banner.component.scss
@@ -34,3 +34,18 @@
   transform: scale(1, -1);
   color: #C0C0C0;
 }
+
+.card{
+  padding:16px;
+  background-color:#4b4b4b;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.high-score-container{
+  display: flex; 
+  flex-direction: column;
+  row-gap: 6px;
+}
