--- a/src/app/pages/home/banner/banner.component.scss
+++ b/src/app/pages/home/banner/banner.component.scss
@@ -49,3 +49,33 @@
   flex-direction: column;
   row-gap: 6px;
 }
+
+.folded-ribbon {
+  --f: 8px; /* control the folded part*/
+  --r: 12px; /* control the ribbon shape */
+  --t: 8px; /* the top offset */
+  
+  position: absolute;
+  inset: var(--t) calc(-1*var(--f)) auto auto;
+  padding: 0 32px var(--f) calc(16px + var(--r));
+  clip-path: 
+    polygon(0 0,100% 0,100% calc(100% - var(--f)),calc(100% - var(--f)) 100%,
+      calc(100% - var(--f)) calc(100% - var(--f)),0 calc(100% - var(--f)),
+      var(--r) calc(50% - var(--f)/2));
+  background: #306EFF;
+  box-shadow: 0 calc(-1*var(--f)) 0 inset #0005;
+  height: 56px;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+}
+
+.featured-game{
+  color:#FFD700;
+  padding:8px;
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 1.5em;
+}
