--- a/src/global.scss
+++ b/src/global.scss
@@ -53,3 +53,16 @@ a:visited {
 	align-items: center;
 	gap:8px !important;
 }
+
+.divider{
+	background:white;margin:16px;
+}
+
+.profile-list-item{
+	display: flex;
+	margin-left: 16px;
+	margin-bottom: 8px;
+	padding-bottom: 8px;
+	align-items: center;
+	gap:8px !important;
+}
