--- a/src/app/pages/games/game/game.page.html
+++ b/src/app/pages/games/game/game.page.html
@@ -1,7 +1,7 @@
 <shared-nav></shared-nav>
 <ion-content>
   <shared-section-header [title]="game?.title"></shared-section-header>
-  <ion-row>
+  <ion-row class="ion-padding">
     <ion-col size="12" size-md="9">
       <ion-slides *ngIf="game?.images" pager="true" [options]="slideOpts">
         <ion-slide *ngFor="let image of game?.images">
@@ -30,12 +30,13 @@
           </ion-button>
         </ion-col>
         <ion-col size="12" class="ion-text-center">
-          <hr style="background:white;margin:16px;"/>
+          <hr class="divider"/>
           <h3>Project Manager</h3>
-          <div class="flex" style="justify-content:center">
+          <div class="profile-list-item">
             <img alt="{{ projectManager?.title }}" width="32" height="32" src="assets/{{ projectManager?.image ? projectManager?.image : 'person.jpg' }}" style="border-radius: 50%" />
             <ion-text>{{ projectManager?.name }}</ion-text>
           </div>
+          <app-contributors *ngIf="contributors.length" [contributors]="contributors"/>
         </ion-col>
       </ion-row>
       <app-nightly-builds *ngIf="game?.nightlyBuilds?.length" [nightlyBuilds]="game?.nightlyBuilds ?? []"></app-nightly-builds>
