OG-14: Fixed iOS styling issues

--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,12 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-title>
+    <h1 class="nav-title">
       <a href="/" title="Home">
         <span class="brand-logo">
           Orcwood Games
         </span>
       </a>
-    </ion-title>
+    </h1>
     <ion-buttons slot="end" class="ion-padding-end">
       <ion-button (click)="utilityService.goToLink('/games')">
         Games
