--- a/src/app/shared/section-header/section-header.component.html
+++ b/src/app/shared/section-header/section-header.component.html
@@ -1,2 +1,4 @@
-<ion-title 
-	style="font-family: 'Covered By Your Grace', cursive; font-size:3em" class="pt-5">{{ title }}</ion-title>
+<h2 
+	class="pt-5 section-header">
+	{{ title }}
+</h2>
