OG-19: Refactor to prep for credits

--- a/src/app/pages/game/components/nightly-builds/nightly-builds.component.html
+++ b/src/app/pages/game/components/nightly-builds/nightly-builds.component.html
@@ -1,6 +1,6 @@
 <ion-row>
   <ion-col size="12" class="ion-text-center">
-    <hr style="background:white;margin:16px;"/>
+    <hr class="divider"/>
     <h3>
       Nightly Builds
     </h3>
