--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <shared-nav></shared-nav>
 <ion-content>
   <ion-grid class="ion-padding">
-    <app-banner></app-banner>
+    <home-banner/>
     <shared-section-header class="ion-text-center" title="Games"></shared-section-header>
     <shared-games class="pb-5"></shared-games>
     <shared-section-header class="ion-text-center" title="Team"></shared-section-header>
