--- a/src/app/pages/game/components/iframe/iframe.component.scss
+++ b/src/app/pages/game/components/iframe/iframe.component.scss
@@ -7,11 +7,7 @@
 
 /* Then style the iframe to fit in the container div with full height and width */
 .responsive-iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
   width: 100%;
   height: 100%;
+	min-height: 600px;
 }
