--- a/src/global.scss
+++ b/src/global.scss
@@ -55,14 +55,14 @@ a:visited {
 }
 
 .divider{
-	background:white;margin:16px;
+	background:white;
 }
 
 .profile-list-item{
 	display: flex;
+	padding-top: 4px;
 	margin-left: 16px;
-	margin-bottom: 8px;
-	padding-bottom: 8px;
+	margin-bottom: 12px;
 	align-items: center;
-	gap:8px !important;
+	gap:12px !important;
 }
