--- a/src/global.scss
+++ b/src/global.scss
@@ -66,3 +66,11 @@ a:visited {
 	align-items: center;
 	gap:12px !important;
 }
+
+.small {
+	font-size: .85rem;
+}
+
+.muted {
+	color: rgb(110, 110, 110);
+}
