--- a/src/app/pages/game/game.page.html
+++ b/src/app/pages/game/game.page.html
@@ -6,13 +6,17 @@
       <game-slide-show *ngIf="game?.images?.length" [images]="game?.images ?? []"/>
       <game-iframe *ngIf="game?.html5Url" [html5Url]="game?.html5Url"/>
       <game-description [description]="game?.description ?? ''"/>
-      <game-credits *ngIf="credits" [credits]="credits"/>
     </ion-col>
     <ion-col size="12" size-md="3">
       <game-resource-links [resourceLinks]="game?.resourceLinks ?? []"/>
       <game-project-manager [projectManager]="projectManager"/>
       <game-contributors *ngIf="contributors.length" [contributors]="contributors"/>
       <game-nightly-builds *ngIf="game?.nightlyBuilds?.length" [nightlyBuilds]="game?.nightlyBuilds ?? []"/>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="12" size-md="9">
+      <game-credits *ngIf="credits" [credits]="credits"/>
     </ion-col>
   </ion-row>
 </ion-content>
