--- a/src/app/pages/game/game.page.html
+++ b/src/app/pages/game/game.page.html
@@ -3,20 +3,29 @@
   <shared-section-header [title]="game?.title"></shared-section-header>
   <ion-row class="ion-padding">
     <ion-col size="12" size-md="9">
-      <game-slide-show *ngIf="game?.images?.length" [images]="game?.images ?? []"/>
-      <game-iframe *ngIf="game?.html5Url" [html5Url]="game?.html5Url"/>
-      <game-description [description]="game?.description ?? ''"/>
+      <game-slide-show
+        *ngIf="game?.images?.length"
+        [images]="game?.images ?? []"
+      />
+      <game-iframe *ngIf="game?.html5Url" [html5Url]="game?.html5Url" />
+      <game-description [description]="game?.description ?? ''" />
     </ion-col>
     <ion-col size="12" size-md="3">
-      <game-resource-links [resourceLinks]="game?.resourceLinks ?? []"/>
-      <game-project-manager [projectManager]="projectManager"/>
-      <game-contributors *ngIf="contributors.length" [contributors]="contributors"/>
-      <game-nightly-builds *ngIf="game?.nightlyBuilds?.length" [nightlyBuilds]="game?.nightlyBuilds ?? []"/>
+      <game-resource-links [resourceLinks]="resourceLinks" />
+      <game-project-manager [projectManager]="projectManager" />
+      <game-contributors
+        *ngIf="contributors.length"
+        [contributors]="contributors"
+      />
+      <game-nightly-builds
+        *ngIf="game?.nightlyBuilds?.length"
+        [nightlyBuilds]="game?.nightlyBuilds ?? []"
+      />
     </ion-col>
   </ion-row>
   <ion-row>
     <ion-col size="12" size-md="9">
-      <game-credits *ngIf="credits" [credits]="credits"/>
+      <game-credits *ngIf="credits" [credits]="credits" />
     </ion-col>
   </ion-row>
 </ion-content>
