--- a/src/app/pages/home/components/banner/banner.component.html
+++ b/src/app/pages/home/components/banner/banner.component.html
@@ -1,29 +1,48 @@
-<ion-row class="pb-5">
-  <ion-col size="12" size-md="3" class="ion-padding" style="margin:auto auto;">
-    <img src="assets/logo-og-games.svg" alt="Orcwood Logo"/>
-  </ion-col>
-  <ion-col size="12" size-md="3" class="card">
-    <div class="folded-ribbon"><span class="featured-game">Featured Game</span></div>
-    <img src="assets/games/downside-up/du-logo.png" alt="Orcwood Logo" class="ion-padding"/>
-    <ion-button (click)="utilityService.goToLink('/games/downside-up')">Play Now</ion-button>
-  </ion-col> 
-  <ion-col size="12" size-md="6" class="game-banner-du">
-    <div class="shaded">
-      <ion-row style="width:100%;height:100%;">
-        <ion-col size="12" style="padding:0;">
-          <div class="shaded">
-            <div class="ion-padding ion-text-center" style="height:100%">
-              <ion-text><strong>High Scores</strong></ion-text>
-              <div class="ion-padding high-score-container">
-                <div *ngFor="let highScore of highScores" class="flexItem">
-                  <span>{{ highScore.gamerTag }}</span>
-                  <span>{{ highScore.time }}</span>
-              </div>
+<ng-container *ngIf="showWinterBanner; else classicBanner">
+  <home-winter-2026-banner></home-winter-2026-banner>
+</ng-container>
+
+<ng-template #classicBanner>
+  <ion-row class="pb-5">
+    <ion-col
+      size="12"
+      size-md="3"
+      class="ion-padding"
+      style="margin: auto auto"
+    >
+      <img src="assets/logo-og-games.svg" alt="Orcwood Logo" />
+    </ion-col>
+    <ion-col size="12" size-md="3" class="card">
+      <div class="folded-ribbon">
+        <span class="featured-game">Featured Game</span>
+      </div>
+      <img
+        src="assets/games/downside-up/du-logo.png"
+        alt="Orcwood Logo"
+        class="ion-padding"
+      />
+      <ion-button (click)="utilityService.goToLink('/games/downside-up')"
+        >Play Now</ion-button
+      >
+    </ion-col>
+    <ion-col size="12" size-md="6" class="game-banner-du">
+      <div class="shaded">
+        <ion-row style="width: 100%; height: 100%">
+          <ion-col size="12" style="padding: 0">
+            <div class="shaded">
+              <div class="ion-padding ion-text-center" style="height: 100%">
+                <ion-text><strong>High Scores</strong></ion-text>
+                <div class="ion-padding high-score-container">
+                  <div *ngFor="let highScore of highScores" class="flexItem">
+                    <span>{{ highScore.gamerTag }}</span>
+                    <span>{{ highScore.time }}</span>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-        </ion-col>
-      </ion-row>
-    </div>
-  </ion-col>
-</ion-row>
+          </ion-col>
+        </ion-row>
+      </div>
+    </ion-col>
+  </ion-row>
+</ng-template>
